# kubernetes-dashboard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  PULL_REQUEST.md  PULL_REQUEST_TEMPLATE.md  README.md  black_formatting_fix.md  devfile.yaml  main.py  project-requirements.md  pyproject.toml  run_and_test.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
kubernetes/: dashboard-deployment.yaml
kubernetes/test/: README.md  pending-pod.yaml  restarting-pod.yaml
src/kubernetes_dashboard/: __init__.py  __main__.py  collectors.py  dashboard.py  kube_client.py  quantity.py
tests/: test_collectors.py  test_kube_client.py  test_quantity.py
