[tool.poetry]
name = "kubernetes-dashboard"
version = "0.1.0"
description = "Open source multi-cluster Kubernetes dashboard with Streamlit"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "kubernetes_dashboard", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.34.0"
kubernetes = "^29.0.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.13"
pytest = "^8.0.0"

[tool.poetry.scripts]
dashboard = "kubernetes_dashboard.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"