[project]
name = "kubernetes-dashboard"
version = "0.1.0"
description = "Open source multi-cluster Kubernetes dashboard with Streamlit"
authors = [{ name = "TaeJi-Kim", email = "rlaxowl5460@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.50.0",
    "kubernetes>=34.1.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.3",
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.3.0",
]

[project.scripts]
dashboard = "kubernetes_dashboard.__main__:main"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T10", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "src"
filterwarnings = [
    "ignore::DeprecationWarning",
]
env = [
    "PYTHONPATH=src",
]
